New Rank Progress Structure